cores adicionadas à página, nova logo e reajuste dos elementos da página

--- a/skin.css
+++ b/skin.css
@@ -1,18 +1,28 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: "Trirong", sans-serif;
 }
 
 :root{
         /* --var-scope: value; */
     --universal-padding: 10px 15px;
+
     --hover-color: rgba(0, 0, 0, 0.2);
-    --high-font: calc(0.62rem + 1vw);
-    --low-font: calc(0.42rem + 1vw);
+    --main-color: #303030;
+    --bg-color: #202020;
+    --menu-color: #FF7700;
+    --adsense-color: #999999;
+    --reserve-color1: #251D3A;
+    --reserve-color2: #2A2550;
+
+    --high-font: calc(0.58rem + 1vw);
+    --mid-font: calc(0.51rem + 1vw);
+    --low-font: calc(0.45rem + 1vw);
 }
 
 body{
-    margin: 0 6px;
+    background-color: var(--bg-color);
 }
 
 ul{
@@ -25,8 +35,7 @@ li:hover{
 
 li{
     margin: 0 0 0 5px;
-    padding: 5px;
-    border: 1px solid blue;
+    padding: 5px;;
     list-style: none;
 }
 
@@ -36,72 +45,88 @@ a{
 
 nav.an_info{
     padding: var(--universal-padding);
-    border: 1px solid red;
+    background-color: var(--main-color);
 }
 
 nav.an_info img{
-    width: 74%;
+    width: 85%;
 }
 
 nav.an_menu{
-    border: 1px solid red;
     display: flex;
     padding: 0 15px;
     justify-content: space-between;
+    background-color: var(--menu-color);
 }
 
 a.an_media-links{
     font-size: var(--high-font);
+    color: var(--menu-color);
 }
 
 a.an_topico:hover{
     background-color: var(--hover-color);
+    color: var(--main-color);
 }
 
 a.an_topico{
-    font-size: var(--low-font);
+    font-size: var(--mid-font);
     padding: 10px 13px;
 }
 
 p{
+    display: flex;
+    text-align: left;
     font-size: var(--low-font);
+    color: var(--adsense-color);
 }
 
 div.an_blog{
-    border: 1px solid red;
 }
 
 div.an_banner{
     display: flex;
-    justify-content: center;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 div.an_banner img{
-    width: 100%;
-    height: 90%;
+    width: 90%;
+    height: 85%;
 }
 
 div.an_title{
     display: flex;
-    justify-content: left;
-    margin: 10px 5px;
+    margin: 0px 0px 10px 0px;
+    align-content: center;
 }
 
 div.an_description{
     display: flex;
-    text-align: left;
-    margin: 0 5px 10px 5px;
+    align-content: center;
+    margin: 0px 0px 10px 0px;
 }
 
 a.an_banner-title{
     font-size: var(--high-font);
+    color: var(--menu-color);
     text-align: left;
 }
 
 div.adsense{
-    border: 1px solid red;
+    margin: 0px 0px 10px 0px;
     display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: var(--adsense-color);
+}
+
+
+div.adsense h2{
+    padding: 20px;
+    display: inline-flex;
+    flex-direction: column;
     justify-content: center;
 }
 
@@ -121,15 +146,15 @@ div.adsense img{
 }
 
 .an_background{
-    border: 1px solid red;
     padding: 10px 0;
 }
 
 .an_news{
-    border: 1px solid red;
     display: flex;
     justify-content: space-between;
-    margin: 5px 15px;
+    padding: 0px 15px;
+    margin: 5px 0px;
+    background-color: var(--main-color);
 }
 
 .an_blog{
@@ -138,13 +163,7 @@ div.adsense img{
     grid-template-rows: 1fr;
 }
 
-#box1{
+#box1, #box2, #box3{
     grid-column-start: 1;
-    grid-row-start: 1;
-    grid-row-end: 3;
-}
-
-#box3{
-    grid-column-start: 2;
     grid-column-end: 3;
 }
